# AiCrateDigger

./: .cursorrules  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  logging_config.py  main.py  pipeline_context.py
backend/app/agents/: extractor.py  parser.py  query_completion.py  query_generator.py  searcher.py
backend/app/api/: __init__.py
backend/app/core/: __init__.py  client_ip.py  config.py  internal_auth.py  logging_config.py  production_guard.py  rate_limiter.py  system_contract.py
backend/app/db/: __init__.py  cache.py  database.py  marketplace_db.py  redis_cache.py  store_loader.py  vector_db.py
backend/app/domain/: listing_schema.py  parse_schema.py
backend/app/domains/: __init__.py
backend/app/llm/: coerce_listing_fields.py  extract_listings.py  parse_user_query.py  verify_album_match.py
backend/app/models/: result.py  search_query.py
backend/eval/: __init__.py  __main__.py  checks.py  cli.py  report.py  runner.py  schema.py
backend/tests/: __init__.py  test_agents_extractor.py  test_app_http_e2e.py  test_eval_dataset.py  test_extract_listings.py  test_geo_city_synonyms.py  test_geo_ranking.py  test_global_quota.py  test_internal_auth_security.py  test_locale_text_variants.py  test_opportunistic_store_discovery.py  test_parse_album_resolution.py  test_physical_local.py  test_pipeline_global_fixes.py  test_pipeline_helpers.py  test_rate_limit_security.py  test_search_cache_key.py  test_search_intent.py  test_store_domain.py  test_store_loader_whitelist_chain.py  test_tavily_include_domains.py  test_tier_runner_evaluator.py  test_verify_album_match.py  test_vinyl_search_early_exit.py
(+281 files in other folders)
