[tool.poetry]
name = "aicratedigger-backend"
version = "0.1.0"
description = "AiCrateDigg FastAPI backend"
authors = ["AiCrateDigg Team"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic-settings = "*"
sqlalchemy = "*"
asyncpg = "*"
openai = "*"
httpx = "*"
rapidfuzz = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
