[tool.poetry]
name = "aicratedigger-backend"
version = "0.1.0"
description = "AiCrateDigger FastAPI backend"
authors = ["AiCrateDigger Team"]
package-mode = false
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
uvicorn = { extras = ["standard"], version = "*" }
pydantic-settings = "*"
sqlalchemy = { version = "^2.0", extras = ["asyncio"] }
asyncpg = "*"
openai = "*"
httpx = "*"
rapidfuzz = "^3.9"
redis = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
